<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AMTL : Android Modem Traces and Logs</string>
    <string name="modem_trace_server_button">Modem Trace Server</string>
    <string name="usbswitch_button">Usbswitch</string>
    <string name="toggle_pin_button">Toggle pin on1</string>
    <string name="config_trace_modem">configure_trace_modem</string>
    <string name="activ_trace_modem">activate_trace_modem</string>
    <string name="menu_configure_trace_modem">Menu configure_trace_modem</string>
    <string name="menu_activate_trace_modem">Menu activate_trace_modem</string>
    <string name="speed_configure_trace_modem">Speed</string>
    <string name="trace_level_configure_trace_modem">Trace level</string>
    <string name="disable_configure_trace_modem">Disable trace</string>
    <string name="apply_configure_trace_modem">Apply</string>
    <string name="speed_78mhz_configure_trace_modem">78MHz</string>
    <string name="speed_156mhz_configure_trace_modem">156MHz</string>
    <string name="trace_bb_sw_configure_trace_modem">bb_sw</string>
    <string name="trace_bb_sw_3g_sw_configure_trace_modem">bb_sw/3g_sw</string>
    <string name="off_configure_trace_modem">Off</string>
    <string name="save_in_activate_trace_modem">Save in</string>
    <string name="repeat_active_trace_modem">Repeat</string>
    <string name="disable_activate_trace_modem">Disable</string>
    <string name="mux_traces_activate_trace_modem">Mux traces</string>
    <string name="usb_activate_trace_modem">USB</string>
    <string name="oneshot_activate_trace_modem">Oneshot</string>
    <string name="persistent_activate_trace_modem">Persistent</string>
    <string name="off_activate_trace_modem">Off</string>
    <string name="enable_mux_activate_trace_modem">Enable</string>
    <string name="disable_mux_activate_trace_modem">Disable</string>
    <string name="apply_activate_configuration">Apply activate configuration</string>
    <string name="apply_mux_configuration">Apply mux configuration</string>
    <string name="emmc_activate_trace_modem">Emmc</string>
    <string name="sdcard_activate_trace_modem">Sdcard</string>
    <string name="mb_100_activate_trace_modem">100MB</string>
    <string name="mb_800_activate_trace_modem">800MB</string>
    <string name="data_max_activate_trace_modem">Data max</string>
    <string name="enable_disable_activate_trace_modem">Enable/Disable</string>
    <string name="enable_disable_configure_trace_modem">Enable/Disable</string>
    <string name="Max_data_max_activate">Max</string>
    <string name="disable_speed_configure">Disable</string>
    <string name="disable_trace_configure">Disable</string>
    <string name="enable_configure">Enable</string>
    <string name="disable_configure">Disable</string>
    <string name="disable_activate">Disable</string>
    <string name="enable_activate">Enable</string>
    <string name="disable_save_activate">Disable</string>
    <string name="disable_data">Disable</string>
    <string name="disable_repeat_activate">Disable</string>
    <string name="disable_data_activate">Disable</string>
    <string name="Text_configure">Text</string>
    <string name="usbswitch_txt">USB switch</string>
    <string name="usb_modem_button">USB modem</string>
    <string name="usb_ape_button">USB APE</string>
    <string name="toggle_on1_txt">Toggle ON1</string>
    <string name="apply_usb_switch_button">Apply USB switch</string>
    <string name="apply_toggle_on1_button">Apply Toggle ON1</string>
    <string name="trace_bb_3g_digrf_button_configure_trace_modem">bb_sw/3G_sw/digrf</string>
    <string name="traces_in_coredump_txt">Traces in Coredump</string>
    <string name="ma_artemis_coredump_txt">MA+Artemis traces</string>
    <string name="ma_artemis_digrf_coredump_txt">MA+Artemis+Digrf</string>
    <string name="disable_ma_artemis_coredump_trace_button">Disable</string>
    <string name="enable_ma_artemis_coredump_trace_button">Enable</string>
    <string name="disable_ma_artemis_digrf_coredump_trace_button">Disable</string>
    <string name="enable_ma_artemis_digrf_coredump_trace_button">Enable</string>
    <string name="apply_ma_artemis_coredump_trace_button">Apply MA &amp; Artemis traces</string>
    <string name="apply_configure_modem_coredump_trace_button">Apply</string>
    <string name="apply_activate_coredump_trace_button">Activate traces</string>
    <string name="active_trace_coredump_txt">Active traces AFTER reboot</string>
    <string name="traces_coredump_button">Traces in Coredump</string>
</resources>