<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:fillViewport="true" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_configure_trace_modem"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="4px"
        android:background="#C0C0C0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_disable_configure_trace_modem"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/configure_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/disable_configure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/disable_configure" />

        <RadioButton
            android:id="@+id/enable_configure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_configure" />
    </RadioGroup>

    <View
        android:id="@+id/View01"
        android:layout_width="wrap_content"
        android:layout_height="4px"
        android:background="#C0C0C0" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_configure_trace_modem"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/configure_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RadioButton
            android:id="@+id/disable_speed_conf_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/disable_speed_configure"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/speed_78mhz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_78mhz_configure_trace_modem" />

        <RadioButton
            android:id="@+id/speed_156mhz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_156mhz_configure_trace_modem" />
    </RadioGroup>

    <View
        android:id="@+id/View03"
        android:layout_width="wrap_content"
        android:layout_height="4px"
        android:background="#C0C0C0" />

    <Button
        android:id="@+id/apply_configure_button"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:text="@string/apply_configure_trace_modem" />

    <EditText
        android:id="@+id/text_configure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:enabled="false"
        android:background="#ffff0f" >

        <requestFocus />
    </EditText>

</LinearLayout>

</ScrollView>