<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_activate_trace_modem"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="2px"
        android:background="#C0C0C0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_disable_activate_trace_modem"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/activate_save_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/disable_activate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/disable_activate" />
        <RadioButton
            android:id="@+id/enable_activate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_activate" />
    </RadioGroup>

    <View
        android:id="@+id/View03"
        android:layout_width="wrap_content"
        android:layout_height="2px"
        android:background="#C0C0C0" />

    <TextView
        android:id="@+id/save_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_in_activate_trace_modem"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/activate_save_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/disable_save_activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/disable_save_activate"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/emmc_activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emmc_activate_trace_modem" />

                <RadioButton
                    android:id="@+id/sdcard_activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sdcard_activate_trace_modem" />

                <RadioButton
                    android:id="@+id/usb_activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usb_activate_trace_modem" />
            </RadioGroup>
        </TableRow>

        <View
            android:id="@+id/View01"
            android:layout_width="wrap_content"
            android:layout_height="2px"
            android:background="#C0C0C0" />

        <TextView
            android:id="@+id/data_max_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_max_activate_trace_modem"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/activate_data_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/disable_data_activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/disable_data_activate"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/mb_100_activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mb_100_activate_trace_modem" />

                <RadioButton
                    android:id="@+id/mb_800_activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mb_800_activate_trace_modem" />

                <RadioButton
                    android:id="@+id/max_data_activate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Max_data_max_activate" />

            </RadioGroup>
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/View02"
        android:layout_width="wrap_content"
        android:layout_height="2px"
        android:background="#C0C0C0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_active_trace_modem"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/activate_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/disable_repeat_activate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/disable_repeat_activate"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/oneshot_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oneshot_activate_trace_modem" />

                <RadioButton
                    android:id="@+id/persistent_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/persistent_activate_trace_modem" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <View
        android:id="@+id/View02"
        android:layout_width="wrap_content"
        android:layout_height="2px"
        android:background="#C0C0C0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trace_level_mts"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/mts_trace_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/disable_trace_conf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/disable_trace_mts"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/trace_bb_sw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trace_bb_sw_mts" />

        <RadioButton
            android:id="@+id/trace_bb_sw_3g_sw_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trace_bb_sw_3g_sw_mts" />

        <RadioButton
            android:id="@+id/trace_bb_sw_3g_sw_digrf_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trace_bb_3g_digrf_button_mts" />
    </RadioGroup>

    <Button
        android:id="@+id/apply_activate_button"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:text="@string/apply_activate_configuration" />

    <EditText
        android:id="@+id/text_activate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:enabled="false"
        android:background="#ffff0f" >

        <requestFocus />
    </EditText>

    <View
        android:id="@+id/View04"
        android:layout_width="wrap_content"
        android:layout_height="2px"
        android:background="#C0C0C0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mux_traces_activate_trace_modem"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/activate_mux_traces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/disable_mux_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/disable_mux_activate_trace_modem" />

                <RadioButton
                    android:id="@+id/enable_mux_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_mux_activate_trace_modem" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/apply_mux_button"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:text="@string/apply_mux_configuration" />
</LinearLayout>

</ScrollView>
