<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usbswitch_txt"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/usb_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/button_usb_modem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usb_modem_button" />

        <RadioButton
            android:id="@+id/button_usb_ape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/usb_ape_button" />
    </RadioGroup>

    <Button
        android:id="@+id/button_apply_usb_switch"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:text="@string/apply_usb_switch_button" />

</LinearLayout>